# server.js
@@ -16,6 +16,7 @@ const loginRoutes = require("./routes/login");
 const levelsRoutes = require("./routes/levels");
 const userRoutes = require("./routes/user");
 const tokensRoutes = require("./routes/tokens");
+const paymasterRoutes = require("./routes/paymaster");
 
 app.get("/", (req, res) => {
   res.json({ message: "Backend is running!" });
@@ -25,6 +26,7 @@ app.use("/login", loginRoutes);
 app.use("/levels", levelsRoutes);
 app.use("/user", userRoutes);
 app.use("/tokens", tokensRoutes);
+app.use("/paymaster", paymasterRoutes);
 
 const port = process.env.PORT || 3000;
 app.listen(port, () => {
